--- a/myProjects/js/SPA POS/index.html
+++ b/myProjects/js/SPA POS/index.html
@@ -8,198 +8,211 @@
 
 
 
+
 </head>
 <body>
- <!--------------------------NavBar------------------------------->
-<nav class="navbar navbar-expand-lg bg-opacity-50 bg-dark fixed-top">
-    <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">
-            <img alt="" class="d-inline-block align-top" height="30" src="assets/img/shop-icon.png" width="30">
-            <span class="text-warning">Lakshan</span> Stores
-        </a>
-        <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-                class="navbar-toggler"
-                data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-            <ul class="navbar-nav me-5 mb-2 mb-lg-0 ms-auto ">
-                <li class="nav-item ">
-                    <a aria-current="page" class="nav-link active text-white " href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a aria-current="page" class="nav-link active text-white" href="#">Customer</a>
-                </li>
-                <li class="nav-item">
-                    <a aria-current="page" class="nav-link active text-white" href="#">Item</a>
-                </li>
-                <li class="nav-item">
-                    <a aria-current="page" class="nav-link active text-white" href="#">Order</a>
-                </li>
-            </ul>
+    <!--------------------------NavBar------------------------------->
+    <nav class="navbar navbar-expand-lg bg-opacity-50 bg-dark fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand text-white" href="#">
+                <img alt="" class="d-inline-block align-top" height="30" src="assets/img/shop-icon.png" width="30">
+                <span class="text-warning">Lakshan</span> Stores
+            </a>
+            <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+                    class="navbar-toggler"
+                    data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                <ul class="navbar-nav me-5 mb-2 mb-lg-0 ms-auto ">
+                    <li class="nav-item ">
+                        <a aria-current="page" class="nav-link active text-white " id="linkHome" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a aria-current="page" class="nav-link active text-white" id="linkCustomer" href="#">Customer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a aria-current="page" class="nav-link active text-white" id="linkItem" href="#">Item</a>
+                    </li>
+                    <li class="nav-item">
+                        <a aria-current="page" class="nav-link active text-white" id="linkOrder" href="#">Order</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+
+
 
 <main class="container-fluid">
     <!--------------------------MainPage------------------------------->
-    <section class="row mt-5 pt-5">
-        <div class="card col-12 col-lg-4">
-            <img alt="..." class="card-img-top" height="407px" src="assets/img/customer.jpg ">
-            <div class="card-body">
-                <h5 class="card-title">Customers</h5>
-                <p class="card-text">50 000+ Customers</p>
-                <a class="btn btn-warning" href="#">Customer</a>
+    <section id="mainContent">
+        <div  class="row mt-5 pt-5" >
+            <div class="card col-12 col-lg-4">
+                <img alt="..." class="card-img-top" height="407px" src="assets/img/customer.jpg ">
+                <div class="card-body">
+                    <h5 class="card-title">Customers</h5>
+                    <p class="card-text">50 000+ Customers</p>
+                    <a class="btn btn-warning" href="#">Customer</a>
+                </div>
             </div>
-        </div>
-        <div class="card col-12  col-lg-4 ">
-            <img alt="..." class="card-img-top" height="407px" src="assets/img/items.png">
-            <div class="card-body">
-                <h5 class="card-title">Items</h5>
-                <p class="card-text">1000+ Items</p>
-                <a class="btn btn-warning" href="#">Item</a>
+            <div class="card col-12  col-lg-4 ">
+                <img alt="..." class="card-img-top" height="407px" src="assets/img/items.png">
+                <div class="card-body">
+                    <h5 class="card-title">Items</h5>
+                    <p class="card-text">1000+ Items</p>
+                    <a class="btn btn-warning" href="#">Item</a>
+                </div>
             </div>
-        </div>
-        <div class="card col-12  col-lg-4">
-            <img alt="..." class="card-img-top" height="401px" src="assets/img/order.jpg">
-            <div class="card-body">
-                <h5 class="card-title">Order</h5>
-                <p class="card-text">20 000+ Orders</p>
-                <a class="btn btn-warning" href="#">Order</a>
+            <div class="card col-12  col-lg-4">
+                <img alt="..." class="card-img-top" height="401px" src="assets/img/order.jpg">
+                <div class="card-body">
+                    <h5 class="card-title">Order</h5>
+                    <p class="card-text">20 000+ Orders</p>
+                    <a class="btn btn-warning" href="#">Order</a>
+                </div>
             </div>
         </div>
     </section>
 
+
     <!--------------------------CustomerPage------------------------------->
-    <section class=" row mt-5 pt-5 ">
-        <h2 class="mb-3">Customer Registration</h2>
-        <div class="ms-2 col-12 col-lg-4">
-            <div class="mb-3 ">
-                <label class="form-label" for="formGroupExampleInput">Customer ID</label>
-                <input class="form-control" id="formGroupExampleInput" placeholder="Your ID" type="text">
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="formGroupExampleInput2">Customer Name</label>
-                <input class="form-control" id="formGroupExampleInput2" placeholder="Your Name" type="text">
-            </div>
-            <div class="mb-3 ">
-                <label class="form-label" for="formGroupExampleInput3">Customer Address</label>
-                <input class="form-control" id="formGroupExampleInput3" placeholder="Your Address" type="text">
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="formGroupExampleInput4">Customer Salary</label>
-                <input class="form-control" id="formGroupExampleInput4" placeholder="Your Salary" type="text">
+    <section id="customerContent">
+        <div  class=" row mt-5 pt-5 " >
+            <h2 class="mb-3">Customer Registration</h2>
+            <div class="ms-2 col-12 col-lg-4">
+                <div class="mb-3 ">
+                    <label class="form-label" for="formGroupExampleInput">Customer ID</label>
+                    <input class="form-control" id="formGroupExampleInput" placeholder="Your ID" type="text">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="formGroupExampleInput2">Customer Name</label>
+                    <input class="form-control" id="formGroupExampleInput2" placeholder="Your Name" type="text">
+                </div>
+                <div class="mb-3 ">
+                    <label class="form-label" for="formGroupExampleInput3">Customer Address</label>
+                    <input class="form-control" id="formGroupExampleInput3" placeholder="Your Address" type="text">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="formGroupExampleInput4">Customer Salary</label>
+                    <input class="form-control" id="formGroupExampleInput4" placeholder="Your Salary" type="text">
+                </div>
+
+                <div aria-label="Basic mixed styles example" class="btn-group mt-2 mb-5 ms-lg-2" role="group">
+                    <button class="btn btn-primary" type="button">Save Customer</button>
+                    <button class="btn btn-danger" type="button">Remove</button>
+                    <button class="btn btn-warning" type="button">Update</button>
+                    <button class="btn btn-success" type="button">Get All</button>
+                    <button class="btn btn-danger" type="button">Clear All</button>
+                </div>
             </div>
 
-            <div aria-label="Basic mixed styles example" class="btn-group mt-2 mb-5 ms-lg-2" role="group">
-                <button class="btn btn-primary" type="button">Save Customer</button>
-                <button class="btn btn-danger" type="button">Remove</button>
-                <button class="btn btn-warning" type="button">Update</button>
-                <button class="btn btn-success" type="button">Get All</button>
-                <button class="btn btn-danger" type="button">Clear All</button>
+            <div class="ms-lg-5 col-12 col-lg-7">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th class="table-warning" scope="col">Customer ID</th>
+                        <th class="table-warning" scope="col">Customer Name</th>
+                        <th class="table-warning" scope="col">Customer Address</th>
+                        <th class="table-warning" scope="col">Customer Salary</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td colspan="2">Larry the Bird</td>
+                        <td>@twitter</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
 
-        <div class="ms-lg-5 col-12 col-lg-7">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th class="table-warning" scope="col">Customer ID</th>
-                    <th class="table-warning" scope="col">Customer Name</th>
-                    <th class="table-warning" scope="col">Customer Address</th>
-                    <th class="table-warning" scope="col">Customer Salary</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
     </section>
 
 
     <!--------------------------ItemPage------------------------------->
-    <section class=" row mt-5 pt-5 ">
-        <h2 class="mb-3">Item Registration</h2>
-        <div class="ms-2 col-12 col-lg-4">
-            <div class="mb-3 ">
-                <label class="form-label" for="formGroupExampleInput0">Item Code</label>
-                <input class="form-control" id="formGroupExampleInput0" placeholder="Code" type="text">
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="formGroupExampleInputA">Item Name</label>
-                <input class="form-control" id="formGroupExampleInputA" placeholder="Name" type="text">
-            </div>
-            <div class="mb-3 ">
-                <label class="form-label" for="formGroupExampleInputB">Item Qty</label>
-                <input class="form-control" id="formGroupExampleInputB" placeholder="Qty" type="text">
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="formGroupExampleInputC">Unit Price</label>
-                <input class="form-control" id="formGroupExampleInputC" placeholder="Unit Price" type="text">
+    <section id="itemContent">
+        <div  class=" row mt-5 pt-5 ">
+            <h2 class="mb-3">Item Registration</h2>
+            <div class="ms-2 col-12 col-lg-4">
+                <div class="mb-3 ">
+                    <label class="form-label" for="formGroupExampleInput0">Item Code</label>
+                    <input class="form-control" id="formGroupExampleInput0" placeholder="Code" type="text">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="formGroupExampleInputA">Item Name</label>
+                    <input class="form-control" id="formGroupExampleInputA" placeholder="Name" type="text">
+                </div>
+                <div class="mb-3 ">
+                    <label class="form-label" for="formGroupExampleInputB">Item Qty</label>
+                    <input class="form-control" id="formGroupExampleInputB" placeholder="Qty" type="text">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="formGroupExampleInputC">Unit Price</label>
+                    <input class="form-control" id="formGroupExampleInputC" placeholder="Unit Price" type="text">
+                </div>
+
+                <div aria-label="Basic mixed styles example" class="btn-group mt-2 mb-5 ms-lg-2" role="group">
+                    <button class="btn btn-primary" type="button">Save Item</button>
+                    <button class="btn btn-danger" type="button">Remove</button>
+                    <button class="btn btn-warning" type="button">Update</button>
+                    <button class="btn btn-success" type="button">Get All</button>
+                    <button class="btn btn-danger" type="button">Clear All</button>
+                </div>
             </div>
 
-            <div aria-label="Basic mixed styles example" class="btn-group mt-2 mb-5 ms-lg-2" role="group">
-                <button class="btn btn-primary" type="button">Save Item</button>
-                <button class="btn btn-danger" type="button">Remove</button>
-                <button class="btn btn-warning" type="button">Update</button>
-                <button class="btn btn-success" type="button">Get All</button>
-                <button class="btn btn-danger" type="button">Clear All</button>
+            <div class="ms-lg-5 col-12 col-lg-7">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th class="table-warning" scope="col">Item Code</th>
+                        <th class="table-warning" scope="col">Item Name</th>
+                        <th class="table-warning" scope="col">Item Qty</th>
+                        <th class="table-warning" scope="col">Unit Price</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td colspan="2">Larry the Bird</td>
+                        <td>@twitter</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
-        </div>
-
-        <div class="ms-lg-5 col-12 col-lg-7">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th class="table-warning" scope="col">Item Code</th>
-                    <th class="table-warning" scope="col">Item Name</th>
-                    <th class="table-warning" scope="col">Item Qty</th>
-                    <th class="table-warning" scope="col">Unit Price</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
-                </tr>
-                </tbody>
-            </table>
         </div>
     </section>
 
+
     <!--------------------------OrderPage------------------------------->
-    <section>
+    <section id="orderContent">
         <div class="row row-cols-1 row-cols-md-3 g-4 mt-5 pt-5 mb-5 pb-5">
 
             <div class="col">
@@ -358,6 +371,11 @@
 </main>
 
 
-<script src="../SPA%20POS/assets/boostrap/js/bootstrap.bundle.min.js"></script>
+
+ <script src="assets/JQuery/jquery-3.6.1.min.js"></script>
+ <script src="assets/js/script.js"></script>
+<script>
+
+</script>
 </body>
 </html>
