--- a/myProjects/js/SPA POS/index.html
+++ b/myProjects/js/SPA POS/index.html
@@ -199,39 +199,36 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col">
-                                <label class="form-label fw-bold" for="oId">Order ID:</label>
-                                <input class="form-control" id="oId" placeholder="ID" type="text">
+                                <label class="form-label fw-bold" for="txtOrderId">Order ID:</label>
+                                <input class="form-control" id="txtOrderId" placeholder="ID" type="text">
                             </div>
                             <div class="col">
-                                <label class="form-label fw-bold" for="iDate">Date:</label>
-                                <input class="form-control" id="iDate" type="date">
+                                <label class="form-label fw-bold" for="txtOrderDate">Date:</label>
+                                <input class="form-control" id="txtOrderDate" type="date">
                             </div>
                         </div>
 
                         <div class="row mt-3">
                             <div class="col">
-                                <label class="form-label fw-bold" for="idCmb1">Customer ID:</label>
-                                <select class="form-select" id="idCmb1">
-                                    <option selected>C001</option>
-                                    <option value="1">C001</option>
-                                    <option value="2">C002</option>
-                                    <option value="3">C003</option>
+                                <label class="form-label fw-bold" for="cmbCusId">Customer ID:</label>
+                                <select class="form-select" id="cmbCusId">
+
                                 </select>
                             </div>
                             <div class="col">
-                                <label class="form-label fw-bold" for="cusName">Customer Name:</label>
-                                <input class="form-control" id="cusName" placeholder="Name" type="text">
+                                <label class="form-label fw-bold" for="txtOrderCusName">Customer Name:</label>
+                                <input class="form-control" id="txtOrderCusName" placeholder="Name" type="text">
                             </div>
                         </div>
 
                         <div class="row mt-3 mb-3">
                             <div class="col">
-                                <label class="form-label fw-bold" for="salary">Salary:</label>
-                                <input class="form-control" id="salary" placeholder="Salary" type="number">
+                                <label class="form-label fw-bold" for="txtOrderCusSalary">Salary:</label>
+                                <input class="form-control" id="txtOrderCusSalary" placeholder="Salary" type="text">
                             </div>
                             <div class="col">
-                                <label class="form-label fw-bold" for="address">Address:</label>
-                                <input class="form-control" id="address" placeholder="Address" type="text">
+                                <label class="form-label fw-bold" for="txtOrderCusAddress">Address:</label>
+                                <input class="form-control" id="txtOrderCusAddress" placeholder="Address" type="text">
                             </div>
                         </div>
                     </div>
@@ -247,40 +244,37 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col">
-                                <label class="form-label fw-bold" for="idCmb">Item:</label>
-                                <select class="form-select" id="idCmb">
-                                    <option selected>I001</option>
-                                    <option value="1">I001</option>
-                                    <option value="2">I002</option>
-                                    <option value="3">I003</option>
+                                <label class="form-label fw-bold" for="cmbItemCode">Item:</label>
+                                <select class="form-select" id="cmbItemCode">
+
                                 </select>
                             </div>
                             <div class="col">
-                                <label class="form-label fw-bold" for="itemName">Item Name:</label>
-                                <input class="form-control" id="itemName" placeholder="Name" type="text">
+                                <label class="form-label fw-bold" for="txtOrderItemName">Item Name:</label>
+                                <input class="form-control" id="txtOrderItemName" placeholder="Name" type="text">
                             </div>
                         </div>
 
                         <div class="row mt-3">
 
                             <div class="col">
-                                <label class="form-label fw-bold" for="qtyOnHand">Qty On Hand:</label>
-                                <input class="form-control" id="qtyOnHand" placeholder="0" type="number">
+                                <label class="form-label fw-bold" for="txtQtyOnHand">Qty On Hand:</label>
+                                <input class="form-control" id="txtQtyOnHand" placeholder="0" type="text">
                             </div>
                             <div class="col">
-                                <label class="form-label fw-bold" for="price">Price:</label>
-                                <input class="form-control" id="price" placeholder="0.00" type="text">
+                                <label class="form-label fw-bold" for="txtOrderPrice">Price:</label>
+                                <input class="form-control" id="txtOrderPrice" placeholder="0.00" type="text">
                             </div>
                         </div>
 
                         <div class="row mt-3">
                             <div class="col">
-                                <label class="form-label fw-bold" for="oQty">Order Quantity:</label>
-                                <input class="form-control" id="oQty" placeholder="0" type="number">
+                                <label class="form-label fw-bold" for="txtOrderQty">Order Quantity:</label>
+                                <input class="form-control" id="txtOrderQty" placeholder="0" type="number">
                             </div>
                         </div>
                         <div class="row mt-3 mb-1">
-                            <button class="btn btn-success" type="button">ADD</button>
+                            <button class="btn btn-success" type="button" id="btnAdd">ADD</button>
                         </div>
 
                     </div>
@@ -315,23 +309,23 @@
                                 <div class="row mt-3">
 
                                     <div class="col">
-                                        <label class="form-label fw-bold" for="cash">Cash:</label>
-                                        <input class="form-control" id="cash" placeholder="0.00" type="text">
+                                        <label class="form-label fw-bold" for="txtCash">Cash:</label>
+                                        <input class="form-control" id="txtCash" placeholder="0.00" type="text">
                                     </div>
                                     <div class="col">
-                                        <label class="form-label fw-bold" for="dis">Discount:</label>
-                                        <input class="form-control" id="dis" placeholder="%" type="number">
+                                        <label class="form-label fw-bold" for="txtDis">Discount:</label>
+                                        <input class="form-control" id="txtDis" placeholder="%" type="number">
                                     </div>
                                 </div>
                                 <div class="row mt-3">
 
                                     <div class="col">
-                                        <label class="form-label fw-bold" for="cash">Balance:</label>
-                                        <input class="form-control" placeholder="0.00" type="text">
+                                        <label class="form-label fw-bold" for="txtBalance">Balance:</label>
+                                        <input class="form-control" placeholder="0.00" type="text" id="txtBalance">
                                     </div>
                                 </div>
                                 <div class="row mt-4 pt-1 mb-1 ">
-                                    <button class="btn btn-success" type="button">Purchase</button>
+                                    <button class="btn btn-success" type="button" id="btnPurchase">Purchase</button>
                                 </div>
                             </div>
                         </div>
@@ -339,6 +333,27 @@
                 </div>
             </div>
         </div>
+        <section class="container-fluid">
+            <div class="row">
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr class="text-white" >
+                            <th class="table-warning" >Item ID</th>
+                            <th class="table-warning"> Name</th>
+                            <th class="table-warning">Price</th>
+                            <th class="table-warning">Qty</th>
+                            <th class="table-warning">Total</th>
+                        </tr>
+                        </thead>
+                        <tbody id="tblOrder">
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+        </section>
 
 
     </section>
@@ -351,7 +366,8 @@
 <script src="assets/js/db/DB.js"></script>
 <script src="assets/js/controller/DashboardController.js"></script>
 <script src="assets/js/controller/CustomerController.js"></script>
-<script src="assets/js/controller/itemController.js"></script>
+<script src="assets/js/controller/OrderController.js"></script>
+<script src="assets/js/controller/ItemController.js"></script>
 <script src="assets/js/model/CustomerDTO.js"></script>
 <script src="assets/js/model/ItemDTO.js"></script>
 
